fix: Keep focus on rename input click on firefox
A fix has been done before to keep focus on rename input component but
it did not work on firefox

On firefox, user-select: none on a parent component prevent a child
input component to get the focus on click (different behavior from
chrome.

We just need to add user-select: text on the input wrapper to fix this.

--- a/src/styles/filenameinput.styl
+++ b/src/styles/filenameinput.styl
@@ -4,6 +4,7 @@
     @extend $form-text
     display table-cell
     width 100%
+    user-select text
 
     input[type=text]
         width   100%
